# meme_description_generator

./: .env  korean_issue_summary_이춘석_20250909_181851.txt  launchpad_description_이춘석_20250909_181851.txt  main.py  main_new.py  pyproject.toml  satire_손흥민.txt  satire_손흥민1.txt  satire_이춘석.txt  satire_정우성.txt  website_description_이춘석_20250909_181851.txt  손흥민 토크노믹스.txt  예비 Few shot.txt
