[project]
name = "meme-satire-agent"
version = "0.1.0"
description = "AI agent for generating satirical meme coin content"
requires-python = ">=3.10,<3.12"

dependencies = [
    "crewai[tools]",
    "newspaper3k",
    "google-generativeai",
    "python-dotenv",
    "requests",
    "beautifulsoup4",
    "lxml",
    "google-search-results"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"